align and fix the nav bar items

--- a/main.css
+++ b/main.css
@@ -11,17 +11,29 @@ p {
 
 /* navbar */
 nav {
-  height: 5rem;
+  height: 2rem;
   background-color:white;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding:;
+
 }
 
-.icons-container {
-  padding: 20px;
+.nav-icons-container {
+  padding: 10px;
+  height: 10px;
+}
+
+.nav-icons-container i {
+  padding: 0px 1px ;
 }
 
 nav img {
-width: 170px;
+  width: auto;
+  height: 50px;
+ 
 }
 
 /* main */
